# LedgerLink

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: main.rs
ledger/: Cargo.toml
ledger/src/: block.rs  chain.rs  lib.rs  mempool.rs  transaction.rs
ledger/src/chain/: memory.rs
network/: Cargo.toml
network/src/: lib.rs
node/: Cargo.toml
node/src/: node.rs
secrets/: generate.sh
utils/: Cargo.toml
utils/src/: lib.rs
