[workspace]

members = ["app", "ledger", "network", "node", "utils"]

default-members = ["app"]
resolver = "2"

[workspace.dependencies]
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.114"
ecdsa = { version = "0.16.9", features = ["serde", "pem"] }
k256 = { version = "0.13.3", features = ["pem"] }
sha2 = "0.10.8"
pem = "3.0"
base64 = "0.22.0"
rand_core = "0.6.0"
