[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
node = { path = "../node" }
ledger = { path = "../ledger" }
utils = { path = "../utils" }

serde = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
k256 = { workspace = true }
